Fix image visibility in edit mode

--- a/css/cover.css
+++ b/css/cover.css
@@ -25,7 +25,11 @@
     top: 0;
     left: 0;
     object-fit: cover;
-    z-index: -1;
+    z-index: 1;
+}
+.dci-cover h1 {
+    position: relative;
+    z-index: 2;
 }
 
 #il_center_col > .dci-cover:first-child:not(.is-editing) {
